--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "description": "this is the backend for the paytm clone app ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Siddharth",
   "license": "ISC"
